--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -1,1 +1,47 @@
 // The layout of the website, basically the css grids
+.navbar {
+    overflow: hidden;
+    height: 55px ;
+    text-align: center;
+    display: block;
+    word-spacing: 20px;
+    margin-left: 5px; 
+}
+
+.navbar a {
+    width: 201px;
+    height: 5.5px;
+    font-family: Poppins;
+    font-size: 10px;
+    line-height: 2.14;
+    color: #666666;
+    text-decoration: none;
+}
+
+a:active {
+    color: #ee534f;
+}
+
+.search_container {
+    float: right;
+    margin-right: 20%;
+    margin-bottom: 10%;
+}
+
+// form {
+//     width: 200px;
+//     margin-top: 5px;
+//     margin-right: 15%;
+// }
+
+// .search_container{
+//     float: right;
+//     padding-bottom: 5px;
+// }
+
+// .banner{
+//     width: 100%;
+//     height: 500px;
+//     background-color: #555555;
+// }
+
