created the button for the banner

--- a/css/main.css
+++ b/css/main.css
@@ -44,4 +44,7 @@ nav {
     .navbar .search_container form {
       display: flex; }
 
+.banner {
+  margin-top: 90px; }
+
 /*# sourceMappingURL=main.css.map */
