--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -69,9 +69,10 @@ nav {
 //     padding-bottom: 5px;
 // }
 
-// .banner{
-//     width: 100%;
-//     height: 500px;
-//     background-color: #555555;
-// }
+.banner{
+    // width: 100%;
+    // height: 500px;
+    // background-color: #555555;
+    margin-top: 90px;
+}
 
