--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -69,10 +69,14 @@ nav {
 //     padding-bottom: 5px;
 // }
 
-.banner{
+.landing_page{
     // width: 100%;
     // height: 500px;
     // background-color: #555555;
     margin-top: 90px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
 }
 
