--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ nav {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-image: url("Code4CT-homepage.jpg"); }
+  background-image: url(""); }
   .landing_page p {
     width: 700px; }
 
