--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -82,7 +82,7 @@ nav {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: url("Code4CT-homepage.jpg");
+    background-image: url("");
 
 
     p{
