--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -51,7 +51,7 @@ nav {
         // margin-bottom: 100%;
         // text-align: center;
         position: relative;
-        // left: 78px; (continue to move the search bar and then move the logo)
+        left: 120px;
 
         form{
             display: flex;
@@ -82,7 +82,7 @@ nav {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: url("");
+    background-image: url("../img/Code4CT-homepage.jpg");
 
 
     p{
