--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -1,2 +1,12 @@
 // All of the big, constant variables
+// Descriptive variables
 
+$pink: #E49085;
+$grey: #666666;
+$lightgrey: #e8e8e8;
+$black: rgba 0 0 0, 0.7;
+
+// Functional variables
+$primary-color: $pink;
+$secondary-color: $lightgrey;
+$text-color: $grey;
